sistemato il program per la migration

--- a/BackEnd/BackEnd/appsettings.json
+++ b/BackEnd/BackEnd/appsettings.json
@@ -35,6 +35,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=kuramaHome;Username=postgres;Password=Generali@1"
+    "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=Generali@1;Database=kuramaHome"
   }
 }
