--- a/BackEnd/BackEnd/appsettings.json
+++ b/BackEnd/BackEnd/appsettings.json
@@ -29,12 +29,17 @@
     "RealEstatePropertyPhotoItemPerPage": 50,
     "RealEstatePropertyItemPerPage": 10
   },
+  "Stripe": {
+    "SecretKey": "sk_test_your_secret_key_here",
+    "PublishableKey": "pk_test_your_publishable_key_here",
+    "WebhookSecret": "whsec_your_webhook_secret_here"
+  },
   "Authentication": {
     "Issuer": "https://localhost:5173",
     "Audience": ""
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=kuramaHome;Username=postgres;Password=Generali@1"
+    "DefaultConnection": "Host=localhost;Database=kuramaHome;Username=postgres;Password=123Qwe.,"
   }
 }
