switch to key vault integration

--- a/BackEnd/BackEnd/appsettings.json
+++ b/BackEnd/BackEnd/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "Storage": {
-    "BlobContainerName": ""
+    "BlobContainerName": "miraihome",
+    "PropertiesBlobContainerName": "miraihomeproperties"
   },
   "MailOptions": {
     "Mail": "",
@@ -16,12 +17,14 @@
     "Port": 465
   },
   "KeyVault": {
-    "Url": "",
+    "Url": "https://miraihomekv.vault.azure.net/",
     "Secrets": {
-      "StorageConnectionString": "BlobConnectionString",
-      "DbConnectionString": "DbConnection",
-      "MailPassword": "MailPassword",
-      "AuthKey": "SecretForKey"
+      "StorageConnectionString": "StorageConnectionString",
+      "DbConnectionString": "DatabaseConnectionString",
+      "MailPassword": "",
+      "AuthKey": "JwtKey",
+      "StripeSecretKey": "StripeSecretKey",
+      "StripeWebhookSecret": "StripeWebhookSecret"
     }
   },
   "PaginationOptions": {
@@ -29,15 +32,9 @@
     "RealEstatePropertyPhotoItemPerPage": 50,
     "RealEstatePropertyItemPerPage": 10
   },
-  "Stripe": {
-    
-  },
   "Authentication": {
-    "Issuer": "https://localhost:5173",
-    "Audience": ""
+    "Issuer": "https://localhost:7267",
+    "Audience": "kuramahome"
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=Generali@1;Database=kuramaHome"
-  }
+  "AllowedHosts": "*"
 }
