--- a/.github/workflows/main_miraihomeapi.yml
+++ b/.github/workflows/main_miraihomeapi.yml
@@ -27,7 +27,7 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish BackEnd/BackEnd/BackEnd.csproj -c Release -o ./publish
+        run: dotnet publish BackEnd/BackEnd.csproj -c Release -o ./publish
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -54,3 +54,4 @@ jobs:
           package: .
 
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3C2E13D7CF1D48AEB3A90CDA54B799FB }}
+
