--- a/.github/workflows/main_miraihomeapi.yml
+++ b/.github/workflows/main_miraihomeapi.yml
@@ -24,10 +24,10 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build BackEnd/BackEnd/BackEnd.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish BackEnd/BackEnd.csproj -c Release -o ./publish
+        run: dotnet publish BackEnd/BackEnd/BackEnd.csproj -c Release -o ./publish
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -50,8 +50,8 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'miraihomeapi'
-          slot-name: 'Production'
           package: .
 
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3C2E13D7CF1D48AEB3A90CDA54B799FB }}
+
 
