--- a/BackEnd/BackEnd/appsettings.json
+++ b/BackEnd/BackEnd/appsettings.json
@@ -10,10 +10,8 @@
     "PropertiesBlobContainerName": "miraihomeproperties"
   },
   "MailOptions": {
-    "Mail": "",
-    "DisplayName": "",
-    "Password": "",
-    "Host": "",
+    "Mail": "info@miraihome.it",
+    "Host": "authsmtp.securemail.pro",
     "Port": 465
   },
   "KeyVault": {
@@ -21,7 +19,7 @@
     "Secrets": {
       "StorageConnectionString": "StorageConnectionString",
       "DbConnectionString": "DatabaseConnectionString",
-      "MailPassword": "",
+      "MailPassword": "MailPassword",
       "AuthKey": "JwtKey",
       "StripeSecretKey": "StripeSecretKey",
       "StripeWebhookSecret": "StripeWebhookSecret"
