--- a/BackEnd/BackEnd/appsettings.json
+++ b/BackEnd/BackEnd/appsettings.json
@@ -15,7 +15,7 @@
     "Port": 465
   },
   "KeyVault": {
-    "Url": "https://miraihomekv.vault.azure.net/",
+    "Url": "https://miraihomekeyvaults.vault.azure.net/",
     "Secrets": {
       "StorageConnectionString": "StorageConnectionString",
       "DbConnectionString": "DatabaseConnectionString",
